--- a/ibus-sayura.spec.in
+++ b/ibus-sayura.spec.in
@@ -1,9 +1,7 @@
-%{!?python_sitearch: %define python_sitearch %(%{__python} -c "from distutils.sysconfig import get_python_lib; print get_python_lib(1)")}
-%define mod_path ibus-@PACKAGE_VERSION_MAJOR@.@PACKAGE_VERSION_MINOR@
 Name:       @PACKAGE_NAME@
 Version:    @PACKAGE_VERSION@
 Release:    1%{?dist}
-Summary:    The Hangul engine for IBus input platform
+Summary:    The Sayura engine for IBus input platform
 License:    GPLv2+
 Group:      System Environment/Libraries
 URL:        http://code.google.com/p/ibus/
@@ -13,14 +11,13 @@ BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
 BuildRequires:  gettext-devel
 BuildRequires:  libtool
-BuildRequires:  libhangul-devel
 BuildRequires:  pkgconfig
+BuildRequires:  ibus-devel
 
 Requires:   ibus
 
 %description
-The Hangul engine for IBus platform. It provides Korean input method from
-libhangul.
+The Sayura engine for IBus platform. It provides Sinhala input method.
 
 %prep
 %setup -q
@@ -33,7 +30,7 @@ make %{?_smp_mflags}
 %install
 rm -rf $RPM_BUILD_ROOT
 make DESTDIR=${RPM_BUILD_ROOT} install
-rm -f $RPM_BUILD_ROOT%{python_sitearch}/_hangul.la
+rm -f $RPM_BUILD_ROOT%{python_sitearch}/_sayura.la
 
 %find_lang %{name}
 
@@ -43,10 +40,10 @@ rm -rf $RPM_BUILD_ROOT
 %files -f %{name}.lang
 %defattr(-,root,root,-)
 %doc AUTHORS COPYING README
-%{_libexecdir}/ibus-engine-hangul
+%{_libexecdir}/ibus-engine-sayura
 %{_datadir}/@PACKAGE@
 %{_datadir}/ibus/component/*
 
 %changelog
-* Fri Aug 08 2008 Huang Peng <shawn.p.huang@gmail.com> - @VERSION@-1
+* Fri Mar 20 2009 Pravin Satpute <pravin.d.s@gmail.com> - @VERSION@-1
 - The first version.
