--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -1,8 +1,9 @@
 # vim:set noet ts=4:
 #
-# ibus-tmpl - The Input Bus template project
+# ibus-sayura - The Sinhala Trans Input Method project
 #
 # Copyright (c) 2007-2008 Huang Peng <shawn.p.huang@gmail.com>
+# Copyright (c) 2008-2009 Pravin Satpute <pravin.d.s@gmail.com>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
