--- a/ibus-sayura.spec.in
+++ b/ibus-sayura.spec.in
@@ -4,8 +4,8 @@ Release:    1%{?dist}
 Summary:    The Sinhala engine for IBus input platform
 License:    GPLv2+
 Group:      System Environment/Libraries
-URL:        http://code.google.com/p/ibus/
-Source0:    http://ibus.googlecode.com/files/%{name}-%{version}.tar.gz
+URL:        http://github.com/pravins/ibus-sayura/tree/master
+Source0:    http://pravins.fedorapeople.org/ibus-sayura/%{name}-%{version}.tar.gz
 
 BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
